homepage archive link stopgap

--- a/_sass/_banner.sass
+++ b/_sass/_banner.sass
@@ -35,7 +35,7 @@ header[role="banner"]
           left: 0
           z-index: 1
     ul.datelist
-      margin: 1em 0 0
+      margin: var(--shim-n) 0 0
       display: flex
       align-items: center
       justify-content: flex-start
